objects/Medallia_Feedback__c.object
<CustomObject>
    <description>Custom object to replicate in Salesforce feedback left by customers in Medallia.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to link a feedback to an account in Salesforce</description>
        <label>Account - Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medallia Feedbacks</relationshipLabel>
        <relationshipName>Medallia_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Close_Flag__c</fullName>
        <description>This field indicates the corresponding alert has been closed in Medallia</description>
        <label>Alert - Close Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert_Closed_date__c</fullName>
        <description>This field shows when the corresponding had been closed in Medallia</description>
        <label>Alert - Closed date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alert_Logs__c</fullName>
        <label>Alert - Logs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <description>This field shows what type of alert has been raised in Medallia</description>
        <label>Alert - Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Yn_Flag__c</fullName>
        <description>This field indicates if an alert has been raised in Medallia based on customer feedback</description>
        <label>Alert - Yn Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>This field indicates what the customer&apos;s email is. Useful if the customer is not an existing contact in Salesforce.</description>
        <label>Contact - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Firstname__c</fullName>
        <description>This field indicates what the customer&apos;s name is. Useful if the customer is not an existing contact in Salesforce.</description>
        <label>Contact - Firstname</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to link the feedback to an existing contact is Salesforce</description>
        <label>Contact - Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medallia Feedbacks</relationshipLabel>
        <relationshipName>Medallia_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Lastname__c</fullName>
        <description>This field indicates what the customer&apos;s lastname is. Useful if the customer is not an existing contact in Salesforce.</description>
        <label>Contact - Lastname</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Reason_MHF__c</fullName>
        <label>Contact Reason MHF</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Reason__c</fullName>
        <label>Contact Reason</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A follow-up case can be created in Salesforce to mirror an alert raised in Medallia. This field link the feedback to the case.</description>
        <label>Follow-up case - Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Medallia Feedbacks</relationshipLabel>
        <relationshipName>Medallia_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Resolution__c</fullName>
        <label>Issue Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTR_Score__c</fullName>
        <label>LTR Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <label>NPS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The survey can be triggered by an event on a case (e.g. closure). This field links the feedback to the original case.</description>
        <label>Original case - Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Medallia Feedbacks (Original case - Number)</relationshipLabel>
        <relationshipName>Medallia_Feedbacks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_case_Owner_id__c</fullName>
        <description>The survey can be triggered by an event on a case (e.g. closure). This field shows who the owner of the original case is.</description>
        <label>Original case - Owner id</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Creation_date__c</fullName>
        <description>This field shows when the record was created in Medallia</description>
        <label>Record - Creation date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Medallia_Id__c</fullName>
        <description>This field indicates what the unique identifier is for the record in Medallia</description>
        <label>Record - Medallia Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Reason_for_exclusion__c</fullName>
        <description>This fields indicates the reason for not sampling a record. Empty if the record was successfully sampled.</description>
        <label>Record - Reason for exclusion</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <description>This field shows where the record is in its lifecycle (e.g. invitation, survey completed, etc.)</description>
        <label>Record - Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Failed</fullName>
                </value>
                <value>
                    <fullName>Delivery bounced</fullName>
                </value>
                <value>
                    <fullName>Reminded</fullName>
                </value>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>This field shows when the customer submitted the feedback back to Medallia</description>
        <label>Response - Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Feedback_URL__c</fullName>
        <description>This fields is used to show a hyperlink to the feedback in Medallia</description>
        <label>Response - Feedback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Response_Main_score__c</fullName>
        <description>This field shows the main score from the customer feedback</description>
        <label>Response - Main score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Main_score_comment__c</fullName>
        <description>This field shows the comment associated to the main score in the feedback</description>
        <label>Response - Main score comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Medallia Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Creation_date__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Contact_Id__c</columns>
        <columns>Response_Main_score__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Medallia Feedback</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medallia Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>